--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       crossorigin></script>
 
     <script>var Alert = ReactBootstrap.Alert;</script>
-    <title>Design Workshop</title>
+    <title>Dev Workshop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
